--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </style>
 
 <div class="rp1">
-  <h2>Fusion Grupera 88.9 FM</h2>
+  <h2>Fusion Grupera</h2>
   <p>Emisión en vivo</p>
   <div class="controls">
     <button class="btn" id="playBtn1" aria-label="Play/Pause">▶ Play</button>
@@ -50,3 +50,4 @@
   vol.addEventListener('input', ()=> audio.volume = vol.value);
 })();
 </script>
+
